Initial implementation of custom functionality (I forgot to commit each change, sorry)
