# src/docs/swagger.docs.json
@@ -243,7 +243,9 @@
   "paths": {
     "/countries": {
       "get": {
-        "tags": ["Data"],
+        "tags": [
+          "Data"
+        ],
         "description": "Returns a list of all countries that are associated with one or more volcanoes, ordered alphabetically.",
         "responses": {
           "200": {
@@ -291,7 +293,9 @@
     },
     "/volcanoes": {
       "get": {
-        "tags": ["Data"],
+        "tags": [
+          "Data"
+        ],
         "description": "Returns a list of volcanoes that are associated with the queried country. The country query parameter is required. The list can optionally be filtered by using the populatedWithin query parameter. This will return a filtered list of volcanoes that have at least one person living within the provided radius.",
         "parameters": [
           {
@@ -310,7 +314,12 @@
             "required": false,
             "schema": {
               "type": "string",
-              "enum": ["5km", "10km", "30km", "100km"]
+              "enum": [
+                "5km",
+                "10km",
+                "30km",
+                "100km"
+              ]
             }
           }
         ],
@@ -375,7 +384,9 @@
     },
     "/volcano/{id}": {
       "get": {
-        "tags": ["Data"],
+        "tags": [
+          "Data"
+        ],
         "description": "Returns an object containing data for the queried volcano. If a valid JWT token is sent in the header of the request, population data for 5km, 10km, 30km and 100km is also provided. To test this using Swagger, click the green 'Authorize' button at the top of this page to enter your JWT token. A JWT token can be obtained by logging in. The path parameter (id) is required.",
         "parameters": [
           {
@@ -515,7 +526,9 @@
     },
     "/user/register": {
       "post": {
-        "tags": ["Authentication"],
+        "tags": [
+          "Authentication"
+        ],
         "description": "Creates a new user account. A request body containing the user to be registered must be sent.",
         "requestBody": {
           "description": "An object containing the email and password of the user to be registered.",
@@ -601,7 +614,9 @@
     "/user/login": {
       "post": {
         "description": "Log in to an existing user account. A request body containing the user credentials must be sent.",
-        "tags": ["Authentication"],
+        "tags": [
+          "Authentication"
+        ],
         "requestBody": {
           "description": "The credentials of the user to log in.",
           "required": true,
@@ -710,7 +725,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Profile"],
+        "tags": [
+          "Profile"
+        ],
         "responses": {
           "200": {
             "description": "An object containing email, firstName, lastName, address (authenticated only) and dob (authenticated only) properties. An example object for an authenticated request is shown below. If no profile information has been entered for the user via the profile PUT request route, all returned values except email are expected to be null. Click on 'Schema' below to see a response example for an unauthenticated request.",
@@ -818,7 +835,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Profile"],
+        "tags": [
+          "Profile"
+        ],
         "responses": {
           "200": {
             "description": "An object containing the user's updated profile information. The object should contain email, firstName, lastName, dob and address properties. An example object is shown below.",
@@ -901,7 +920,9 @@
     },
     "/me": {
       "get": {
-        "tags": ["Administration"],
+        "tags": [
+          "Administration"
+        ],
         "description": "A route to assist in automating some of the marking process for this assignment.",
         "responses": {
           "200": {
@@ -925,6 +946,520 @@
             }
           }
         }
+      }
+    },
+    "/volcanoes/{volcanoId}/save": {
+      "post": {
+        "tags": [
+          "Saved Volcanoes"
+        ],
+        "description": "Saves a volcano to the authenticated user's saved list.",
+        "parameters": [
+          {
+            "name": "volcanoId",
+            "in": "path",
+            "description": "ID of the volcano to save",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Volcano successfully saved.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano saved"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request. Missing required parameters.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano ID and user email are required parameters"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized. User is not authenticated.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MissingAuthHeader"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Volcano not found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano with ID 123 not found"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "Conflict. Volcano is already saved by the user.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano with ID 123 is already saved by user test@example.com"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Saved Volcanoes"
+        ],
+        "description": "Removes a volcano from the authenticated user's saved list.",
+        "parameters": [
+          {
+            "name": "volcanoId",
+            "in": "path",
+            "description": "ID of the volcano to remove",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Volcano successfully removed.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano removed from saved list"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request. Missing required parameters.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano ID and user email are required parameters"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized. User is not authenticated.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MissingAuthHeader"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Volcano not found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano with ID 123 not found"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/volcanoes/saved": {
+      "get": {
+        "tags": [
+          "Saved Volcanoes"
+        ],
+        "description": "Retrieves all volcanoes saved by the authenticated user.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of saved volcanoes.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "integer",
+                        "example": 123
+                      },
+                      "name": {
+                        "type": "string",
+                        "example": "Example Volcano"
+                      },
+                      "country": {
+                        "type": "string",
+                        "example": "Example Country"
+                      },
+                      "region": {
+                        "type": "string",
+                        "example": "Example Region"
+                      },
+                      "subregion": {
+                        "type": "string",
+                        "example": "Example Subregion"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request. Missing required parameters.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "User email is a required parameter"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized. User is not authenticated.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MissingAuthHeader"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/volcano/{volcanoId}/images": {
+      "post": {
+        "tags": [
+          "Volcano Images"
+        ],
+        "description": "Posts an image for a specific volcano. Requires authentication.",
+        "parameters": [
+          {
+            "name": "volcanoId",
+            "in": "path",
+            "description": "ID of the volcano",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Image URL to be posted.",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "imageUrl": {
+                    "type": "string",
+                    "example": "https://example.com/image.jpg"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Image successfully posted.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Image posted"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request. Missing required parameters.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano ID, image URL and user email are required parameters"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized. User is not authenticated.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MissingAuthHeader"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Volcano not found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano with ID 123 not found"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Volcano Images"
+        ],
+        "description": "Gets all images for a specific volcano.",
+        "parameters": [
+          {
+            "name": "volcanoId",
+            "in": "path",
+            "description": "ID of the volcano",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of images for the specified volcano.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "integer",
+                        "example": 456
+                      },
+                      "image_url": {
+                        "type": "string",
+                        "example": "https://example.com/image.jpg"
+                      },
+                      "posted_by": {
+                        "type": "string",
+                        "example": "test@example.com"
+                      },
+                      "reports": {
+                        "type": "integer",
+                        "example": 0
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request. Missing required parameters.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano ID is a required parameter"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Volcano not found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano with ID 123 not found"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/volcano/{volcanoId}/images/{imageId}/reports": {
+      "post": {
+        "tags": [
+          "Volcano Images"
+        ],
+        "description": "Posts a report for a specific volcano image. Requires authentication.",
+        "parameters": [
+          {
+            "name": "volcanoId",
+            "in": "path",
+            "description": "ID of the volcano",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "imageId",
+            "in": "path",
+            "description": "ID of the image",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   }
